# femboy-launcher

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  RadialProgress.tsx  SettingsPage.tsx  StatisticsPanel.tsx  Titlebar.tsx  UpdateUI.css  i18n.ts  index.css  useAutoUpdate.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  rpc.rs
