[package]
name = "app"
version = "1.4.4"
description = "Femboy Launcher"
authors = ["Conteek"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
discord-rich-presence = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
sha1 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v5"] }
futures-util = "0.3"
rand = "0.9.4"
base64 = "0.22.1"
sha2 = "0.10.9"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.1"
chrono = { version = "0.4", features = ["serde"] }
tar = "0.4.46"
flate2 = "1.1.9"
toml = "0.8"
